--- a/style2.css
+++ b/style2.css
@@ -104,9 +104,10 @@ body {
 /* Visa fler-knappens stil */
 .show-more-btn {
     display: block;
-    width: 20%;
-    /* Justerad bredd */
-    padding: 10px 0;
+    width: auto;
+    /* Baserar bredden på innehållet och padding */
+    padding: 10px 40px;
+    /* Justerad horisontell padding */
     background-color: rgb(13, 59, 102);
     color: white;
     text-align: center;
@@ -115,6 +116,8 @@ body {
     border-radius: 5px;
     margin: 10px auto;
     /* Centrerar knappen */
+    transition: background-color 0.3s;
+    /* Lägger till en mjuk övergång för hover-effekt */
 }
 
 /* Hover-effekt för "Visa fler"-knappen */
@@ -125,8 +128,10 @@ body {
 /* Anpassning för mobilvy */
 @media (max-width: 600px) {
     .show-more-btn {
-        width: 50%;
-        /* Justerad bredd för bättre synlighet och lämplighet på mindre skärmar */
+        padding: 10px 20px;
+        /* Minskar padding för mobilvy */
+        width: auto;
+        /* Baserar bredden på innehållet och padding */
         margin: 10px auto;
         /* Fortsätter att centrera knappen */
     }
@@ -135,14 +140,13 @@ body {
         grid-template-columns: repeat(4, 1fr);
     }
 
-
     .matratt {
         flex-basis: calc(50% - 10px);
-        /* Gör så att två resultat får plats på en rad, med utrymme för marginal */
+        /* Justerar bredden för att passa två resultat per rad */
         max-width: calc(50% - 10px);
-        /* Sätter en maxbredd för att behålla utseendet även när skärmen är mindre */
+        /* Sätter en maxbredd för att behålla layouten */
         margin: 5px;
-        /* Lägger till lite marginal runt varje resultat */
+        /* Justerar marginalen för att passa mindre skärmar */
     }
 }
 
@@ -256,15 +260,4 @@ body {
     margin: 10px;
     /* Justera detta för önskat utrymme mellan resultat */
     /* Ytterligare styling för sökresultatet */
-}
-
-@media (max-width: 600px) {
-    .matratt {
-        flex-basis: calc(50% - 10px);
-        /* Justera storlek för att passa två per rad */
-        max-width: calc(50% - 10px);
-        /* Samma här */
-        margin: 5px;
-        /* Mindre marginal för mindre skärmar */
-    }
 }
