--- a/style.css
+++ b/style.css
@@ -1,19 +1,18 @@
 /* Loader CSS */
-/*
 .blocks {
     display: flex;
     align-items: center;
     position: fixed;
-    /* Om du vill att loadern ska vara över allt annat innehåll 
+    /* Om du vill att loadern ska vara över allt annat innehåll */
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
     justify-content: center;
     z-index: 9999;
-    /* High z-index to make sure it's on top 
+    /* High z-index to make sure it's on top */
     background: transparent;
-    /* Loader background 
+    /* Loader background */
 }
 
 .block {
@@ -54,83 +53,11 @@
     }
 }
 
-*/
-
-.loader-container {
-    display: grid;
-    place-items: center;
-    min-height: 100vh;
-}
-
-svg.tea {
-    --secondary: #33406F;
-    width: 74px;
-    height: 96px;
-}
-
-svg .tea path {
-    stroke: var(--secondary);
-    stroke-width: 2;
-    /* Denna bredd matchar din SVG path's stroke-width */
-    fill: none;
-    /* Eftersom vi inte vill fylla vägarna, bara stroke dem */
-}
-
-@keyframes swing {
-    50% {
-        transform: rotate(-3deg);
-    }
-}
-
-@keyframes steamLarge {
-    0% {
-        stroke-dashoffset: 13;
-        opacity: 0.6;
-    }
-
-    100% {
-        stroke-dashoffset: 39;
-        opacity: 0;
-    }
-}
-
-@keyframes steamSmall {
-    0% {
-        stroke-dashoffset: 9;
-        opacity: 0.6;
-    }
-
-    80%,
-    100% {
-        stroke-dashoffset: 27;
-        opacity: 0;
-    }
-}
-
-#teabag {
-    transform-origin: top center;
-    transform: rotate(3deg);
-    animation: swing 2s infinite;
-}
-
-#steamL {
-    stroke-dasharray: 13;
-    stroke-dashoffset: 13;
-    animation: steamLarge 2s infinite;
-}
-
-#steamR {
-    stroke-dasharray: 9;
-    stroke-dashoffset: 9;
-    animation: steamSmall 2s infinite;
-}
-
-
-/* CSS för att initialt dölja loadern 
+/* CSS för att initialt dölja loadern */
 #loader {
     display: none;
 }
-*/
+
 /* CSS för att mörkna och sudda ut bakgrunden */
 #overlay {
     position: fixed;
@@ -325,7 +252,7 @@ html {
     left: 0;
     width: 100%;
     height: 100%;
-    /* background-color: rgb(106, 4, 15); */
+    /* background-color: rgb(106, 4, 15); */ 
     background-color: rgb(250, 240, 202);
     z-index: -1;
 }
